--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@openai/chatkit-react": ">=1.1.1 <2.0.0",
     "next": "^15.5.4",
+    "openai": "^4.77.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
